生徒翻訳を大体完成(controller関係は未翻訳)

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label t :name %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label t :address %><br />
     <%= f.text_area :address %>
   </div>
   <div class="field">
-    <%= f.label :phone %><br />
+    <%= f.label t :phone %><br />
     <%= f.text_field :phone %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label t :email %><br />
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :birth %><br />
+    <%= f.label t :birth %><br />
     <%= f.date_select :birth %>
   </div>
   <div class="field">
-    <%= f.label :admitted %><br />
+    <%= f.label t :admitted %><br />
     <%= f.date_select :admitted %>
   </div>
   <div class="field">
-    <%= f.label :graduated %><br />
+    <%= f.label t :graduated %><br />
     <%= f.date_select :graduated %>
   </div>
   <div class="actions">
