--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New student</h1>
+<h1><%= t "students.new" %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', students_path %>
+<%= link_to t(:Back), students_path %>
