--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing student</h1>
+<h1><%= t "students.edit" %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
+<%= link_to t(:Show), @student %> |
+<%= link_to t(:Back), students_path %>
