--- a/app/views/admin/students/_form.html.erb
+++ b/app/views/admin/students/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@student) do |f| %>
-  <% if @student.errors.any? %>
+<%= form_for(@admin_student) do |f| %>
+  <% if @admin_student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
+      <h2><%= pluralize(@admin_student.errors.count, "error") %> prohibited this student from being saved:</h2>
 
       <ul>
-      <% @student.errors.full_messages.each do |msg| %>
+      <% @admin_student.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
