--- a/app/views/admin/students/edit.html.erb
+++ b/app/views/admin/students/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to t(:Show), @student %> |
-<%= link_to t(:Back), students_path %>
+<%= link_to t(:Show), @admin_student %> |
+<%= link_to t(:Back), admin_students_path %>
