--- a/app/views/admin/panel/index.html.erb
+++ b/app/views/admin/panel/index.html.erb
@@ -1,3 +1,3 @@
 admin index
-<%= link_to t("students.list"), students_path %>
-<%= link_to t("class_manager"), admin_class_managers_path %>
+<%= link_to t("students.list"), admin_students_path %>
+<%= link_to t("class_manager"), admin_class_manager_path %>
