--- a/app/views/admin/panel/index.html.erb
+++ b/app/views/admin/panel/index.html.erb
@@ -1,3 +1,4 @@
 admin index
 <%= link_to t("students.list"), admin_students_path %>
 <%= link_to t("class_manager"), "/admin/class_manager" %>
+<%= link_to t("syllibuses"), admin_syllabuses_path %>
