--- a/app/views/admin/syllabuses/show.html.erb
+++ b/app/views/admin/syllabuses/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 
-<%= link_to 'Back', syllabuses_path %>
+<%= link_to 'Edit', edit_admin_syllabus_path(@syllabus) %> |
+<%= link_to 'Back', admin_syllabuses_path %>
