--- a/app/views/admin/syllabuses/index.html.erb
+++ b/app/views/admin/syllabuses/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing syllabuses</h1>
+<h1><%= t "syllabuses.list" %></h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Credits</th>
+    <th><%= t 'syllabuses.name' %></th>
+    <th><%= t 'syllabuses.description' %></th>
+    <th><%= t 'syllabuses.credits' %></th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,13 +15,13 @@
     <td><%= syllabus.name %></td>
     <td><%= syllabus.description %></td>
     <td><%= syllabus.credits %></td>
-    <td><%= link_to 'Show', admin_syllabus_path(syllabus) %></td>
-    <td><%= link_to 'Edit', edit_admin_syllabus_path(syllabus) %></td>
-    <td><%= link_to 'Destroy', admin_syllabus_path(syllabus), confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to t('Show'), admin_syllabus_path(syllabus) %></td>
+    <td><%= link_to t('Edit'), edit_admin_syllabus_path(syllabus) %></td>
+    <td><%= link_to t('Destroy'), admin_syllabus_path(syllabus), confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Syllabus', new_admin_syllabus_path %>
+<%= link_to t('syllabuses.new'), new_admin_syllabus_path %>
