--- a/app/views/admin/syllabuses/show.html.erb
+++ b/app/views/admin/syllabuses/show.html.erb
@@ -1,20 +1,20 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b><%= t 'syllabuses.name' %>:</b>
   <%= @syllabus.name %>
 </p>
 
 <p>
-  <b>Description:</b>
+  <b><%= t 'syllabuses.description' %>:</b>
   <%= @syllabus.description %>
 </p>
 
 <p>
-  <b>Credits:</b>
+  <b><%= t 'syllabuses.credits' %>:</b>
   <%= @syllabus.credits %>
 </p>
 
 
-<%= link_to 'Edit', edit_admin_syllabus_path(@syllabus) %> |
-<%= link_to 'Back', admin_syllabuses_path %>
+<%= link_to t('Edit'), edit_admin_syllabus_path(@syllabus) %> |
+<%= link_to t('Back'), admin_syllabuses_path %>
