--- a/app/views/admin/panel/index.html.erb
+++ b/app/views/admin/panel/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <li><%= link_to t("students.list"), admin_students_path %></li>
   <li><%= link_to t("syllabuses.list"), admin_syllabuses_path %></li>
-  <li><%= link_to t("class_manager"), "/admin/class_manager" %></li>
+  <li><%= link_to t("school_classes.list"), school_classes_path %></li>
 </ul>
