--- a/app/views/syllabuses/index.html.erb
+++ b/app/views/syllabuses/index.html.erb
@@ -16,8 +16,12 @@
     <td><%= syllabus.description %></td>
     <td><%= syllabus.credits %></td>
     <td><%= link_to 'Show', syllabus %></td>
+    <td><%= link_to 'Edit', edit_syllabus_path(syllabus) %></td>
+    <td><%= link_to 'Destroy', syllabus, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
+
+<%= link_to 'New Syllabus', new_syllabus_path %>
