--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@admin_student) do |f| %>
-  <% if @admin_student.errors.any? %>
+<%= form_for(@student) do |f| %>
+  <% if @student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@admin_student.errors.count, "error") %> prohibited this student from being saved:</h2>
+      <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
 
       <ul>
-      <% @admin_student.errors.full_messages.each do |msg| %>
+      <% @student.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -29,15 +29,15 @@
   </div>
   <div class="field">
     <%= f.label t :birth %><br />
-    <%= f.date_select :birth, :start_year => (Date.today.year - 20), :end_year => (Date.today.year), :default => 15.years.ago %>
+    <%= f.date_select :birth %>
   </div>
   <div class="field">
     <%= f.label t :admitted %><br />
-    <%= f.date_select :admitted, :start_year => (Date.today.year - 10), :end_year => (Date.today.year + 5), :default => Date.today %>
+    <%= f.date_select :admitted %>
   </div>
   <div class="field">
     <%= f.label t :graduated %><br />
-    <%= f.date_select :graduated, :start_year => (Date.today.year - 5), :end_year => (Date.today.year + 10), :default => 3.years.from_now %>
+    <%= f.date_select :graduated %>
   </div>
   <div class="actions">
     <%= f.submit %>
