--- a/app/views/syllabuses/_form.html.erb
+++ b/app/views/syllabuses/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t 'syllabuses.name' %><br />
+    <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label t 'syllabuses.description' %><br />
+    <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label t 'syllabuses.credits' %><br />
+    <%= f.label :credits %><br />
     <%= f.number_field :credits %>
   </div>
   <div class="actions">
