ドロップダウンセレクトにした。デモの間はこれで後からgs-suggest改造して使用。

--- a/app/views/school_classes/_form.html.erb
+++ b/app/views/school_classes/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :syllabus %><br />
-    <%= f.text_field :syllabus %>
-    <%= Syllabus.all %>
+    <% #f.text_field :syllabus %>
+    <%= f.select :syllabus_id, Syllabus.all.collect { |s| [s.name, s.id] } %>
   </div>
   <div class="field">
     <%= f.label :schedule %><br />
