--- a/app/views/school_classes/_form.html.erb
+++ b/app/views/school_classes/_form.html.erb
@@ -12,21 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :code %><br />
+    <%= f.label t('school_classes.code') %><br />
     <%= f.text_field :code %>
   </div>
   <div class="field">
-    <%= f.label :syllabus %><br />
-    <% #f.text_field :syllabus %>
-    <%= f.select :syllabus_id, Syllabus.all.collect { |s| [s.name, s.id] } %>
-  </div>
-  <div class="field">
-    <%= f.label :schedule %><br />
-    <%= f.text_field :schedule %>
-  </div>
-  <div class="field">
-    <%= f.label :teacher %><br />
-    <%= f.text_field :teacher %>
+    <%= f.label t(:syllabus) %><br />
+    <%= f.select :syllabus, Syllabus.all.collect { |s| [s.name, s.id] } %>
   </div>
   <div class="actions">
     <%= f.submit %>
