--- a/app/views/school_classes/new.html.erb
+++ b/app/views/school_classes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New school_class</h1>
+<h1><%= t 'school_classes.new' %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', school_classes_path %>
+<%= link_to t(:Back), school_classes_path %>
