--- a/app/views/school_classes/show.html.erb
+++ b/app/views/school_classes/show.html.erb
@@ -1,25 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Code:</b>
+  <b><%= t 'school_classes.code' %>:</b>
   <%= @school_class.code %>
 </p>
 
 <p>
-  <b>Syllabus:</b>
-  <%= @school_class.syllabus %>
+  <b><%= t 'combined_code' %>:</b>
+  <%= if @syllabus.code != "" then @syllabus.code + "-" end -%><%= if @school_class.code != "" then @school_class.code + "-" end -%>
 </p>
 
 <p>
-  <b>Schedule:</b>
-  <%= @school_class.schedule %>
+  <b><%= t :syllabus %>:</b>
+  <%= Syllabus::find(@school_class.syllabus_id).name %>
 </p>
 
-<p>
-  <b>Teacher:</b>
-  <%= @school_class.teacher %>
-</p>
-
-
-<%= link_to 'Edit', edit_school_class_path(@school_class) %> |
-<%= link_to 'Back', school_classes_path %>
+<%= link_to t(:Edit), edit_school_class_path(@school_class) %> |
+<%= link_to t(:Back), school_classes_path %>
