--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@school_class) do |f| %>
-  <% if @school_class.errors.any? %>
+<%= form_for(@course) do |f| %>
+  <% if @course.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@school_class.errors.count, "error") %> prohibited this school_class from being saved:</h2>
+      <h2><%= pluralize(@course.errors.count, "error") %> prohibited this course from being saved:</h2>
 
       <ul>
-      <% @school_class.errors.full_messages.each do |msg| %>
+      <% @course.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label t('school_classes.code') %><br />
+    <%= f.label t('courses.code') %><br />
     <%= f.text_field :code %>
   </div>
   <div class="field">
