--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -8,5 +8,7 @@
 $(document).ready(function() {
     // create DatePicker from input HTML element
     $(".datepicker").kendoDatePicker();
+    
+    kendo.culture("ja-JP");
 });
 </script>
