--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,5 +1,12 @@
-<ul>
+<ul id="menubar">
   <li><%= link_to t("students.list"), students_path %></li>
-  <li><%= link_to t("syllabuses.list"), syllabuses_path %></li>
-  <li><%= link_to t("courses.list"), courses_path %></li>
+  <li><%= t "class_management" %>
+  <ul>
+    <li><%= link_to t("syllabuses.list"), syllabuses_path %></li>
+    <li><%= link_to t("courses.list"), courses_path %></li>
+  </ul>
 </ul>
+
+<script>
+  $("#menubar").kendoMenu();
+</script>
