--- a/app/views/course_enrollments/_new_course_enrollment.html.erb
+++ b/app/views/course_enrollments/_new_course_enrollment.html.erb
@@ -1,1 +1,21 @@
-test
+<%= form_for(@course_enrollment) do |f| %>
+  <% if @course_enrollment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@course_enrollment.errors.count, "error") %> prohibited this course_enrollment from being saved:</h2>
+
+      <ul>
+      <% @course_enrollment.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :student %><br />
+    <%= f.text_field :student %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
