--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -16,10 +16,10 @@
 </p>
 
 <div id="course_enrollments">
+
 </div>
-<%= link_to_function t("add_student") do |page|
-  page.insert_html :bottom, :class_enrollments, :partial => "course_enrollments/new_course_enrollment", :object => CourseEnrollment.new
-end %>
+<% # link_to_add_course_enrollment @course, "course_enrollments", t('add_student') %>
+<%= link_to t('add_student'), {:action => :new_course_enrollment}, :remote => true %>
 
 <%= link_to t(:Edit), edit_course_path(@course) %> |
 <%= link_to t(:Back), courses_path %>
