--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -16,17 +16,23 @@
 </p>
 
 <div id="course_enrollments">
-  <div id="enrolled_students_list">
-  </div>
+  <p id="enrolled_students_count">
+    <b><%= t :num_enrolled %>:</b>
+    <%= @course_enrollments.count %>
+  </p>
+  <p id="enrolled_students_list">
+    <b><%= t "course_enrollments.list" %>:</b>
+    <ul>
+      <% @course_enrollments.each do |enrollment| %>
+        <li><%= Student.find(enrollment.student_id).name %></li>
+      <% end %>
+    </ul>
+  </p>
   <div id="add_student_enrollment">
   </div>
 </div>
 
 
-<%= link_to_enroll_student t('add_student'), @course.id, "add_student_enrollment" %>
-<% # link_to t('add_student'), {:controller => :course_enrollments, :action => :new_from_course}, :remote => true, :id => "add_student_enrollment" %>
-<% # link_to_enroll_student t('add_student'), {:controller => :course_enrollments, :action => :new, :format => :json}, :remote => true, :id => "new_course_enrollment" %>
-<% # link_to t('add_student'), {:method => :new_course_enrollment}, :remote => true %>
-
+<%= link_to_enroll_student t('add_student'), @course.id, "add_student_enrollment" %> | 
 <%= link_to t(:Edit), edit_course_path(@course) %> |
 <%= link_to t(:Back), courses_path %>
