KendoUI Styles Fix&Add

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -37,7 +37,8 @@
         $("#grid").kendoGrid({
             height: 360,
             groupable: true,
-            sortable: true
+            sortable: true,
+            selectable: true
         });
     });
 </script>
