クラス[グルーピング]の追加

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -20,7 +20,8 @@ a {
   &:visited {
     color: #666; }
   &:hover {
-    color: #fff; } }
+    color: #fff;
+    background-color: #000; } }
 
 div {
   &.field, &.actions {
