--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,12 +2,10 @@
 
 学園陣
 
-<div id="user_nav">
+<div id="login">
   <% if user_signed_in? %>
-    Signed in as <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
   <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+    <%= link_to t("devise.sign_in"), new_user_session_path %>
   <% end %>
 </div>
 
