--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,12 +1,10 @@
-<ul id="menubar">
-  <li><%= link_to t("students.list"), students_path %></li>
-  <li><%= t "class_management" %>
-  <ul>
-    <li><%= link_to t("syllabuses.list"), syllabuses_path %></li>
-    <li><%= link_to t("courses.list"), courses_path %></li>
-  </ul>
-</ul>
+<div id="menubar">
+  <% if user_signed_in? %>
+    <%= current_user.email %>
+    <%= link_to t("devise.sign_out"), destroy_user_session_path, :method => :delete %>
+    <%= render :partial => "shared/menubar_menu" %>
+  <% else %>
+    <%= link_to t("devise.sign_in"), new_user_session_path %>
+  <% end %>
+</div>
 
-<script>
-  $("#menubar").kendoMenu();
-</script>
