色々更新。クラス関係を入れようか検討中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <body>
   <div id="container" class="k-content">
     <%= render :partial => "shared/menubar" %>
+    <%= render :partial => "shared/flash" %>
   
     <%= yield %>
   </div>
