--- a/app/views/class_groups/_form.html.erb
+++ b/app/views/class_groups/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label t "class_groups.name" %><br />
     <%= f.text_field :name %>
   </div>
   <div class="actions">
