--- a/app/views/class_groups/index.html.erb
+++ b/app/views/class_groups/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Listing class_groups</h1>
+<h1><%= t "class_groups.list"%></h1>
 
 <table>
   <tr>
-    <th>Name</th>
+    <th><%= t "class_groups.name"%></th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,13 +11,13 @@
 <% @class_groups.each do |class_group| %>
   <tr>
     <td><%= class_group.name %></td>
-    <td><%= link_to 'Show', class_group %></td>
-    <td><%= link_to 'Edit', edit_class_group_path(class_group) %></td>
-    <td><%= link_to 'Destroy', class_group, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to t(:Show), class_group %></td>
+    <td><%= link_to t(:Edit), edit_class_group_path(class_group) %></td>
+    <td><%= link_to t(:Destroy), class_group, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Class group', new_class_group_path %>
+<%= link_to t("class_groups.new"), new_class_group_path %>
