--- a/app/views/class_groups/new.html.erb
+++ b/app/views/class_groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New class_group</h1>
+<h1><%= t "class_groups.new" %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', class_groups_path %>
+<%= link_to t(:Back), class_groups_path %>
