希望によりスタイル導入

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -45,4 +45,4 @@
 
 <br />
 
-<%= link_to t('students.new'), new_student_path %>
+<%= button_to t('students.new'), new_student_path, :method => :get %>
