--- a/app/assets/stylesheets/override_main.css.scss
+++ b/app/assets/stylesheets/override_main.css.scss
@@ -1,4 +1,6 @@
 body {
+  width: 100%;
+  height: 100%;
   margin: 0px;
   padding: 0px;
   color: #000;
@@ -6,7 +8,8 @@ body {
 }
 
 #container {
-  width: 920px;
-  margin: 32px auto;
-  padding: 32px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 5px;
 }
