--- a/app/views/class_groups/index.html.erb
+++ b/app/views/class_groups/index.html.erb
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to t("class_groups.new"), new_class_group_path %>
+<%= link_to t("class_groups.new"), new_class_group_path, :class => "k-button" %>
