--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -45,4 +45,4 @@
 
 <br />
 
-<%= button_to t('students.new'), new_student_path, :method => :get %>
+<%= link_to t('students.new'), new_student_path, :class => "k-button" %>
