--- a/app/views/syllabuses/index.html.erb
+++ b/app/views/syllabuses/index.html.erb
@@ -37,4 +37,4 @@
 
 <br />
 
-<%= link_to t('syllabuses.new'), new_syllabus_path %>
+<%= link_to t('syllabuses.new'), new_syllabus_path, :class => "k-button" %>
