--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -41,4 +41,4 @@
 
 <br />
 
-<%= link_to t('courses.new'), new_course_path %>
+<%= link_to t('courses.new'), new_course_path, :class => "k-button" %>
