Students Grid Fix

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,46 +1,75 @@
 <h1><%= t "students.list" %></h1>
 
-<table id="grid">
-  <tr>
-    <th data-field="<%= t "students.name" %>"><%= t "students.name" %></th>
-    <th data-field="<%= t "students.address" %>"><%= t "students.address" %></th>
-    <th data-field="<%= t "students.phone" %>"><%= t "students.phone" %></th>
-    <th data-field="<%= t "students.email" %>"><%= t "students.email" %></th>
-    <th data-field="<%= t "students.birth" %>"><%= t "students.birth" %></th>
-    <th data-field="<%= t "students.admitted" %>"><%= t "students.admitted" %></th>
-    <th data-field="<%= t "students.graduated" %>"><%= t "students.graduated" %></th>
-    <th data-field="管理">管理</th>
-  </tr>
-
-  <% @students.each do |student| %>
-  <tr>
-    <td><%= student.name %></td>
-    <td><%= student.address %></td>
-    <td><%= student.phone %></td>
-    <td><%= student.email %></td>
-    <td><%= student.birth %></td>
-    <td><%= student.admitted %></td>
-    <td><%= student.graduated %></td>
-    <td>
-      <div>
-        <%= link_to t(:Show), student %>
-        <%= link_to t(:Edit), edit_student_path(student) %>
-        <%= link_to t(:Destroy), student, confirm: 'Are you sure?', method: :delete %>
-      </div>
-    </td>
-  </tr>
-  <% end %>
-</table>
+<div id="grid"></div>
 
 <script>
-    $(document).ready(function() {
-        $("#grid").kendoGrid({
-            height: 360,
-            groupable: true,
-            sortable: true,
-            selectable: true
-        });
+$(document).ready(function() {
+  
+  $.getJSON("/students.json",function(ds)
+  {
+    for(var i = 0; i < ds.length; i++)
+    {
+      var tag = "<a href='/students/"+(i+1)+"'>表示</a> <a href='/students/"+(i+1)+"/edit'>編集</a>";
+      ds[i]["manage"] = tag;
+    }
+    SetGrid(ds);
+  });
+  
+  function SetGrid(DataSource)
+  {
+    $("#grid").kendoGrid
+    ({
+      dataSource:
+      {
+        data: DataSource,
+        pageSize: 20
+      },
+      height: 720,
+      groupable: false,
+      scrollable: false,
+      sortable: true,
+      pageable: true,
+      columns: 
+      [
+        {
+          width: 128,
+          field: "name",
+          title: "<%= t "students.name" %>"
+        },
+        {
+          field: "address",
+          title: "<%= t "students.address" %>"
+        },
+        {
+          field: "phone",
+          title: "<%= t "students.phone" %>"
+        },
+        {
+          field: "email",
+          title: "<%= t "students.email" %>"
+        },
+        {
+          field: "birth",
+          title: "<%= t "students.birth" %>"
+        },
+        {
+          field: "admitted",
+          title: "<%= t "students.admitted" %>"
+        },
+        {
+          field: "graduated",
+          title: "<%= t "students.graduated" %>"
+        },
+        {
+          field: "manage",
+          encoded: false,
+          title: "<%= t "manage" %>"
+        }
+      ]
     });
+  }
+
+});
 </script>
 
 <br />
