--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,7 @@
  * = require scaffolds.css.scss
  * = require kendo_styles/kendo.common.min.css
  *  require kendo_styles/kendo.gakuengine.css
+ * require kendo_styles/kendo.silver.min.css
  *  require kendo_styles/override_kendo.css.scss
  * = require override_main.css.scss
  * = require elegant-brit-kendo-theme.css
