--- a/app/assets/stylesheets/kendo_styles/kendo.gakuengine.css
+++ b/app/assets/stylesheets/kendo_styles/kendo.gakuengine.css
@@ -1,7 +1,7 @@
 /* Kendo skin */
 /* main colors */
 .k-widget {
-  background-color: #ffffff;
+  background-color: #bed3ca;
 }
 .k-widget,
 .k-input,
@@ -46,7 +46,7 @@
 .k-dropdown-wrap,
 .k-tooltip,
 .k-progress {
-  border-color: #dbdbde;
+  border-color: #6b7b6e;
 }
 .k-group,
 .k-toolbar,
@@ -61,20 +61,20 @@ td.k-group-cell,
 .k-calendar th,
 .k-dropzone-hovered,
 .k-upload-files {
-  background-color: #ebf6f7;
+  background-color: #bed3ca;
 }
 .k-list-container {
-  border-color: #dbdbde;
+  border-color: #c4c4c4;
   background-color: #f3f3f4;
 }
 .k-content,
 .k-editable-area,
 .k-panelbar li.k-item,
 .k-tiles {
-  background-color: #fafafa;
+  background-color: #d6e9ca;
 }
 .k-alt, .k-separator {
-  background-color: #ebf6f7;
+  background-color: #ffffff;
 }
 .k-widget .k-dropdown-wrap,
 .k-widget .k-picker-wrap,
@@ -90,7 +90,7 @@ div.k-picker-wrap.k-state-active,
 span.k-numeric-wrap.k-state-active,
 .k-numeric-wrap.k-state-focused,
 .k-numeric-wrap.k-state-focused:hover {
-  border-color: #dbdbde;
+  border-color: #6b7b6e;
   background-color: #f3f3f4;
 }
 .k-autocomplete .k-input,
@@ -99,7 +99,7 @@ span.k-numeric-wrap.k-state-active,
 .k-dropdown-wrap.k-state-focused .k-input,
 .k-picker-wrap.k-state-focused .k-input,
 .k-numeric-wrap.k-state-focused .k-input {
-  border-color: #dbdbde;
+  border-color: #6b7b6e;
 }
 .k-input, .k-textbox {
   background-color: #ffffff;
@@ -109,19 +109,19 @@ span.k-numeric-wrap.k-state-active,
 .k-textbox,
 .k-popup,
 .k-content {
-  color: #515967;
+  color: #000000;
 }
 .k-combobox .k-input,
 .k-picker-wrap .k-input,
 .k-numeric-wrap .k-input,
 .k-autocomplete .k-input {
-  color: #515967;
+  color: #000000;
 }
 .k-link:link, .k-link:visited {
-  color: #515967;
+  color: #000000;
 }
 .k-header {
-  color: #515967;
+  color: #000000;
 }
 .k-header,
 .k-grid-header,
@@ -139,7 +139,7 @@ span.k-numeric-wrap.k-state-active,
 .k-state-selected,
 .k-state-focused,
 .k-tabstrip-items .k-item {
-  background-image: url(http://cdn.kendostatic.com/2011.3.1129/styles/textures/highlight.png);
+  background-image: url(http://cdn.kendostatic.com/2011.3.1407/styles/textures/highlight.png);
 }
 .k-header,
 .k-grid-header,
@@ -149,7 +149,7 @@ span.k-numeric-wrap.k-state-active,
 .k-grid-pager,
 .k-button,
 .k-draghandle {
-  background-color: #eeeeee;
+  background-color: #e3e3e3;
 }
 /* icons */
 .k-icon {
@@ -168,36 +168,36 @@ span.k-numeric-wrap.k-state-active,
 .k-callout,
 .k-progress,
 .k-progress-status {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/sprite.png');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/sprite.png');
 }
 .k-loading {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/loading.gif');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/loading.gif');
 }
 .k-loading-image {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/loading-image.gif');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/loading-image.gif');
 }
 .k-loading-color {
   background-color: #ffffff;
 }
 .k-button {
-  color: #515967;
+  color: #000000;
 }
 .k-button,
 .k-button.k-state-disabled:hover,
 .k-state-disabled .k-button:hover,
 .k-draghandle {
-  border-color: #dbdbde;
-  background-color: #eeeeee;
+  border-color: #6b7b6e;
+  background-color: #bed3ca;
 }
 .k-button:hover, .k-draghandle:hover {
-  border-color: #a6afbe;
-  background-color: #a6afbe;
+  border-color: #47885e;
+  background-color: #47885e;
 }
 /* states */
 .k-state-active, .k-state-active:hover, .k-active-filter {
-  background-color: #ffffff;
-  border-color: #5383c3;
-  color: #515967;
+  background-color: #bed3ca;
+  border-color: #6b7b6e;
+  color: #000000;
 }
 .k-state-selected,
 .k-list > .k-state-selected,
@@ -208,8 +208,8 @@ span.k-numeric-wrap.k-state-active,
 .k-ghost-splitbar-horizontal,
 .k-draghandle.k-state-selected:hover {
   color: #ffffff;
-  background-color: #5383c3;
-  border-color: #5383c3;
+  background-color: #5a79ba;
+  border-color: #5a79ba;
 }
 .k-state-selected > .k-link {
   color: #ffffff;
@@ -221,26 +221,26 @@ span.k-numeric-wrap.k-state-active,
 .k-list > .k-state-hover,
 .k-state-focused,
 .k-marquee {
-  color: #263248;
-  background-color: #a6afbe;
-  border-color: #a6afbe;
+  color: #ffffff;
+  background-color: #47885e;
+  border-color: #47885e;
 }
 .k-state-hover > .k-link, .k-other-month.k-state-hover .k-link {
-  color: #263248;
+  color: #ffffff;
 }
 .k-state-focused > .k-link,
 .k-autocomplete.k-state-hover,
 .k-picker-wrap.k-state-hover,
 .k-numeric-wrap.k-state-hover,
 .k-dropdown-wrap.k-state-hover {
-  background-color: #a6afbe;
-  border-color: #a6afbe;
+  background-color: #47885e;
+  border-color: #6b7b6e;
 }
 .k-dropdown .k-state-hover .k-input {
-  color: #263248;
+  color: #ffffff;
 }
 .k-dropdown .k-state-focused .k-input {
-  color: #515967;
+  color: #000000;
 }
 .k-state-error {
   border-color: #ff0000;
@@ -258,26 +258,26 @@ span.k-numeric-wrap.k-state-active,
 .k-dropzone em,
 .k-tile-empty strong,
 .k-slider .k-draghandle {
-  color: #a6afbe;
+  color: #c4c4c4;
 }
 /* Slider */
 .k-slider-track {
-  background-color: #eeeeee;
+  background-color: #e3e3e3;
 }
 .k-slider-selection {
-  background-color: #5383c3;
+  background-color: #5a79ba;
 }
 .k-slider-horizontal .k-tick {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/slider-h.gif');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/slider-h.gif');
 }
 .k-slider-vertical .k-tick {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/slider-v.gif');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/slider-v.gif');
 }
 /* Tooltip */
 .k-tooltip {
-  border-color: #5383c3;
+  border-color: #5a79ba;
   background-color: #ffffff;
-  color: #515967;
+  color: #000000;
 }
 .k-tooltip-validation {
   border-color: #ffe79e;
@@ -293,20 +293,20 @@ span.k-numeric-wrap.k-state-active,
 }
 /* Upload */
 .k-progress-status {
-  border-color: #a6afbe transparent;
+  border-color: #47885e transparent;
 }
 /* ImageBrowser */
 .k-tile {
-  border-color: #f8fbf8;
+  border-color: #d6e9ca;
 }
 .k-tiles li.k-state-hover {
-  border-color: #a6afbe;
+  border-color: #47885e;
 }
 .k-tiles li.k-state-selected {
-  border-color: #5383c3;
+  border-color: #5a79ba;
 }
 .k-tile .k-folder {
-  background-image: url('http://cdn.kendostatic.com/2011.3.1129/styles/Silver/imagebrowser.png');
+  background-image: url('http://cdn.kendostatic.com/2011.3.1407/styles/Silver/imagebrowser.png');
 }
 /* Shadows */
 .k-popup,
