合わせが必要

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -17,7 +17,7 @@
 
 <div id="tabStrip">
   <ul>
-    <li><%= t "course_enrollments.list" %></li>
+    <li class="k-state-acive"><%= t "course_enrollments.list" %></li>
     <li>課題</li>
     <li>試験</li>
   </ul>
