students gird fix

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -30,7 +30,7 @@
   <div class="field">
     <%= f.label t :birth %><br />
     <%= f.date_select :birth %>
-    <input class="datepicker"></input>
+    <input class="datepicker" id="birth-dp"></input>
   </div>
   <div class="field">
     <%= f.label t :admitted %><br />
